tests/conformance/invalid/null_id_column.hedl
%VERSION: 1.0
%STRUCT: T: [id,value]
---
data: @T
  |~,1
